[package]
name = "frost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
iron = "0.6.1"
router = "0.6.0"
mlua = { version = "0.9.2", features = ["lua54", "serialize"] }
regex = "1.10.2"
reqwest = {version = "0.11.23", features = ["blocking", "json"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"


[build-dependencies]
reqwest = {version = "0.11.23", features = ["blocking"]}

[workspace]
members = ["example"]
